// How to use protos: https://protobuf.dev/programming-guides/editions
edition = "2023";

package org.emulinker.proto;

option java_multiple_files = true;

import "google/protobuf/timestamp.proto";

enum PlayerNumber {
  // Note: In some languages having multiple enum values with the same
  // name causes issues so it's good to prefix with the name.
  PLAYER_NUMBER_UNKNOWN = 0;
  ONE = 1;
  TWO = 2;
  THREE = 3;
  FOUR = 4;
}

message Event {
  // Number of nanoseconds from an arbitrary point of time in the past.
  // This can be used to check elapsed time between events events for
  // a single game, but not necessarily between events between two games.
  int64 timestamp_ns = 1;

  message GameStart {

    message PlayerDetails {
      PlayerNumber player_number = 1;

      // User's average ping when they joined the server.
      double ping_ms = 2;

      int32 frame_delay = 3;
    }

    repeated PlayerDetails players = 1;

    google.protobuf.Timestamp timestamp = 2;
  }

  message ReceivedGameData {
    PlayerNumber received_from = 1;
  }

  // Server has collected data from all parties for the frame and will
  // now combine and broadcast them back out to each player.
  message FanOut {
  }

  oneof event_type {
    GameStart game_start = 2;
    ReceivedGameData received_game_data = 3;
    FanOut fan_out = 4;
  }
}

// All metadata stored about the game.
message GameLog {
  repeated Event events = 1;
}
